--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -13,6 +13,8 @@
         $this->headScript()->appendFile('js/jquery.dataTables.min.js');
         $this->headScript()->appendFile('js/funcoesJquery.js');
         $this->headScript()->appendFile('js/formValidation.js');
+        $this->headScript()->appendFile('js/jquery.maskedinput.min.js');
+        $this->headScript()->appendFile('js/mascaras.js');
         echo $this->headLink() . "\n";
         echo $this->headScript() . "\n";
         ?>
