--- a/application/views/scripts/grosseira/editar.phtml
+++ b/application/views/scripts/grosseira/editar.phtml
@@ -197,7 +197,7 @@
                         <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                     <?php endforeach; ?>
                 </select>
-                <input class="responsivo" style="float:left;" type="time" name="tempoPesqueiro" placeholder="Tempo Até pesqueiro" size="10px">
+                <input style="float:left;" type="text" name="tempoPesqueiro" placeholder="Tempo Até pesqueiro" size="10px" class="time">
 
             </div>
 
