--- a/application/views/scripts/jerere/editar.phtml
+++ b/application/views/scripts/jerere/editar.phtml
@@ -183,7 +183,7 @@
                                 <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                             <?php endforeach; ?>
                         </select>
-                        <input class="responsivo" style="float:left;" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px"/>
+                        <input style="float:left;" type="text" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px" class="time">
                         <input class="responsivo" style="float:left;" type="number" name="distAPesqueiro" placeholder="Distância Até pesqueiro (km)" size="23px"/>
 
                     </div>
