--- a/application/views/scripts/vara-pesca/editar.phtml
+++ b/application/views/scripts/vara-pesca/editar.phtml
@@ -217,7 +217,7 @@
                                 <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                             <?php endforeach; ?>
                         </select>
-                        <input style="float:left;" class="responsivo" type="time" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px"/>
+                        <input style="float:left;" type="text" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px" class="time">
                         <input style="float:left;" class="responsivo" type="number" name="distAPesqueiro" placeholder="Distância Até pesqueiro (km)" size="23px"/>
 
                     </div>
