correção artes-pesqueiros

--- a/application/views/scripts/manzua/editar.phtml
+++ b/application/views/scripts/manzua/editar.phtml
@@ -180,7 +180,7 @@
                             <option value="<?= $pesqueiro['paf_id']; ?>"><?= $pesqueiro['paf_pesqueiro']; ?></option>
                         <?php endforeach; ?>
                     </select>
-                    <input style="float:left;" type="text" name="tempoPesqueiro" placeholder="Tempo Até pesqueiro" size="10px" class="time">
+                    <input style="float:left;" type="text" name="tempoAPesqueiro" placeholder="Tempo Até pesqueiro" size="10px" class="time">
                     <input class="responsivo" style="float:left;" type="number" name="distAPesqueiro" placeholder="Distância Até pesqueiro (km)" size="23px"/>
 
                 </div>
