Adição de * nos campos obrigatórios de Entrevistas e remoção de acento em Jerere

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -144,7 +144,7 @@
                                 <li><a href="<?= $this->url(array("controller" => "coleta-manual", "action" => "visualizar"), null, true) ?>">Coleta Manual</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "emalhe", "action" => "visualizar"), null, true) ?>">Emalhe</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "grosseira", "action" => "visualizar"), null, true) ?>">Espinhel/Groseira</a></li>
-                                <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "visualizar"), null, true) ?>">Jereré</a></li>
+                                <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "visualizar"), null, true) ?>">Jerere</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "linha", "action" => "visualizar"), null, true) ?>">Pesca de Linha</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "linha-fundo", "action" => "visualizar"), null, true) ?>">Linha de Fundo</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "manzua", "action" => "visualizar"), null, true) ?>">Manzuá</a></li>
@@ -212,7 +212,7 @@
                                     <li><a href="<?= $this->url(array("controller" => "coleta-manual", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Coleta Manual</a></li>
                                     <li><a href="<?= $this->url(array("controller" => "emalhe", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Emalhe</a></li>
                                     <li><a href="<?= $this->url(array("controller" => "grosseira", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Espinhel/Grosseira</a></li>
-                                    <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Jereré</a></li>
+                                    <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Jerere</a></li>
                                     <li><a href="<?= $this->url(array("controller" => "linha", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Linha</a></li>
                                     <li><a href="<?= $this->url(array("controller" => "linha-fundo", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Linha de Fundo</a></li>
                                     <li><a href="<?= $this->url(array("controller" => "manzua", "action" => "relatoriolista"), null, true) ?>"target="_blank">Entrevistas - Manzuá</a></li>
@@ -246,7 +246,7 @@
                                 <li><a href="<?= $this->url(array("controller" => "coleta-manual", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Coleta Manual</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "emalhe", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Emalhe</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "grosseira", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Espinhel/Grosseira</a></li>
-                                <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Jereré</a></li>
+                                <li><a href="<?= $this->url(array("controller" => "jerere", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Jerere</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "linha", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Linha</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "linha-fundo", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Linha de Fundo</a></li>
                                 <li><a href="<?= $this->url(array("controller" => "manzua", "action" => "relatorio"), null, true) ?>"target="_blank">Entrevistas - Manzuá</a></li>
