--- a/application/views/scripts/barcos/tablebarcos.phtml
+++ b/application/views/scripts/barcos/tablebarcos.phtml
@@ -107,7 +107,7 @@
 
         <?php foreach ($this->arrayBarJerere as $key => $entrevista): ?>
             <tr>
-            <td>Jereré</td>
+            <td>Jerere</td>
             <td><?= $entrevista['bar_nome'] ?></td>
             <td><?= $entrevista['tte_tipoembarcacao'] ?></td>
             <td><?= $entrevista['tp_nome'] ?></td>
