--- a/application/views/scripts/especie/tableespc.phtml
+++ b/application/views/scripts/especie/tableespc.phtml
@@ -107,7 +107,7 @@
 
         <?php foreach ($this->arrayEspJerere as $key => $entrevista): ?>
             <tr>
-            <td>Jereré</td>
+            <td>Jerere</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['spc_quantidade'] ?></td>
             <td><?= $entrevista['spc_peso_kg'] ?></td>
