--- a/application/views/scripts/estatistica/entrevista.phtml
+++ b/application/views/scripts/estatistica/entrevista.phtml
@@ -353,7 +353,7 @@
 <br/>
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 7: Pesqueiros Mais Monitorados Em Jereré</legend>
+    <legend>Gráfico 7: Pesqueiros Mais Monitorados Em Jerere</legend>
   <canvas id="pesqByJerere" style="width:100%;"></canvas>
 </div>
 <br/>
