--- a/application/views/scripts/estatistica/tableesp.phtml
+++ b/application/views/scripts/estatistica/tableesp.phtml
@@ -124,7 +124,7 @@
 
         <?php foreach ($this->arrayBioJerere as $key => $entrevista): ?>
             <tr>
-            <td>Jereré</td>
+            <td>Jerere</td>
             <td><?= $entrevista['esp_nome_comum'] ?></td>
             <td><?= $entrevista['tbp_comprimento']." cm" ?></td>
             <td><?= $entrevista['tbp_peso']." kg" ?></td>
