--- a/application/views/scripts/estatistica/unidadecaptura.phtml
+++ b/application/views/scripts/estatistica/unidadecaptura.phtml
@@ -329,7 +329,7 @@
 <br/>
 <br/>
 <div class="box-chart">
-    <legend>Gráfico 6: Quantidade de Pescadores Monitorados Em Jereré</legend>
+    <legend>Gráfico 6: Quantidade de Pescadores Monitorados Em Jerere</legend>
   <canvas id="pescByPortoJerere" style="width:100%;"></canvas>
 </div>
 <br/>
