--- a/application/views/scripts/ficha-diaria/editar.phtml
+++ b/application/views/scripts/ficha-diaria/editar.phtml
@@ -323,7 +323,7 @@
             <?php endforeach; ?>
             <?php foreach($this->jerere as $key => $entrevistaJerere): ?>
                 <tr>
-                    <td>Jereré</td>
+                    <td>Jerere</td>
                     <td><?= $entrevistaJerere['mnt_id'] ?></td>
                     <td><?= $entrevistaJerere['jre_id'] ?></td>
                     <td><?= $entrevistaJerere['tp_nome'] ?></td>
