--- a/application/views/scripts/jerere/index.phtml
+++ b/application/views/scripts/jerere/index.phtml
@@ -1,5 +1,5 @@
 <div id="titulos">
-    <h2>Desembarque->Pesca de Jereré</h2>
+    <h2>Desembarque->Pesca de Jerere</h2>
     <h3>Entrevista</h3>
 </div>
 
