--- a/application/views/scripts/arrasto-fundo/editar.phtml
+++ b/application/views/scripts/arrasto-fundo/editar.phtml
@@ -1,3 +1,5 @@
+<div id="campos_obrigatorios">Campos com * são obrigatórios</div>
+
 <div id="titulos">
     <h2>Desembarque->Arrasto de Fundo</h2>
     <h3>Entrevista</h3>
@@ -15,7 +17,7 @@
                     <input type="text" name="id_fichaDiaria" placeholder="ID" disabled value="<?= $this->monitoramento['fd_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
-                    <label>ID monitoramento:</label>
+                    <label>ID monitoramento*:</label>
                     <input type="text" name="id_monitoramento" placeholder="ID"  value="<?= $this->entrevista['mnt_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
@@ -35,7 +37,7 @@
                     <input type="checkbox"  name="motor" <?php if($this->entrevista['af_motor'] === true){ echo 'checked';} else{ echo '';} ?>/><br />
                 </div>
                 <div class="form-esq">
-                    <label>Barco:</label>
+                    <label>Barco*:</label>
                     <select name="nomeBarco" required />
                     <option value=" " selected></option>
                     <?php
@@ -49,7 +51,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Tipo de Barco:</label>
+                    <label>Tipo de Barco*:</label>
                     <select name="tipoBarco" />
                     <?php
                     foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
@@ -65,7 +67,7 @@
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">    
-                    <label>Pescador Entrevistado:</label>
+                    <label>Pescador Entrevistado*:</label>
                     <select name="pescadorEntrevistado" />
                     <?php
                     foreach ($this->pescadores as $key => $pescador):
@@ -78,7 +80,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Quant. de Pescadores:</label>
+                    <label>Quant. de Pescadores*:</label>
                     <input type="number" name="numPescadores" placeholder="QuantidadePescadores" min="1" value="<?=$this->entrevista['af_quantpescadores']?>"/><br />
                 </div>
             </div>
@@ -86,21 +88,21 @@
                 <legend><h4>Saída e Volta:</h4></legend>
                 <div class="form-esq">
 
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataSaida" placeholder="Data da Saída" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->dataSaida ?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaSaida" placeholder="Hora da Saída" value="<?=$this->horaSaida ?>"/>
                 </div>
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataVolta" placeholder="Data da Volta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->dataVolta ?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaVolta" placeholder="Hora da Volta" value="<?=$this->horaVolta ?>"/>
                 </div>
             </div>
@@ -128,7 +130,7 @@
             <div class="esquerda">
                 <legend><h4>Outros dados:</h4></legend>                
                 <div class="form-esq">    
-                    <label>Destino do Pescado:</label>
+                    <label>Destino do Pescado*:</label>
                     <select name="destinoPescado" />
                     <?php
                     foreach ($this->destinos as $key => $destino):
