--- a/application/views/scripts/calao/editar.phtml
+++ b/application/views/scripts/calao/editar.phtml
@@ -1,3 +1,5 @@
+<div id="campos_obrigatorios">Campos com * são obrigatórios</div>
+
 <div id="titulos">
     <h2>Desembarque->Pesca de Calão</h2>
     <h3>Entrevista</h3>
@@ -13,7 +15,7 @@
                     <input type="text" name="id_fichaDiaria" placeholder="ID" disabled="true" value="<?= $this->monitoramento['fd_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
-                    <label>ID monitoramento:</label>
+                    <label>ID monitoramento*:</label>
                     <input type="text" name="id_monitoramento" placeholder="ID" value="<?= $this->entrevista['mnt_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
@@ -41,7 +43,7 @@
 } ?>/><br />
                 </div>
                 <div class="form-esq">
-                    <label>Barco:</label>
+                    <label>Barco*:</label>
                     <select name="nomeBarco" placeholder="Nome do Barco" />
                     <option value=" " selected></option>
 <?php
@@ -55,7 +57,7 @@ foreach ($this->barcos as $key => $barco):
 
                 </div>
                 <div class="form-esq">
-                    <label>Tipo de Barco:</label>
+                    <label>Tipo de Barco*:</label>
                     <select name="tipoBarco" />
 <?php
 foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
@@ -71,7 +73,7 @@ endforeach;
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">    
-                    <label>Pescador Entrevistado:</label>
+                    <label>Pescador Entrevistado*:</label>
                     <select name="PescadorEntrevistado" />
 <?php
 foreach ($this->pescadores as $key => $pescador):
@@ -83,18 +85,18 @@ endforeach;
                     </select><br />
                 </div>
                 <div class="form-esq">
-                    <label>Quant. de Pescadores:</label>
+                    <label>Quant. de Pescadores*:</label>
                     <input type="text"  name="NumPescadores" min="1" placeholder="Quantidade de Pescadores "value="<?= $this->entrevista['cal_quantpescadores'] ?>"/><br />
                 </div>
             </div>
             <div class="esquerda">
                 <legend><h4>Tempo:</h4></legend>
                 <div class="form-esq">
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="data" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?= $this->entrevista['cal_data'] ?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Tempo Gasto:</label>
+                    <label>Tempo Gasto*:</label>
                     <input type="time" name="tempoGasto"value="<?= $this->entrevista['cal_tempogasto'] ?>"/>
                 </div>
             </div>
