--- a/application/views/scripts/jerere/visualizar.phtml
+++ b/application/views/scripts/jerere/visualizar.phtml
@@ -1,7 +1,7 @@
 <fieldset id="Entrevista"></fieldset>
 <form name="jerere" method="post">
 
-    <h2>Entrevistas Cadastradas->Pesca de Jereré (lista limitada em 200)</h2>
+    <h2>Entrevistas Cadastradas->Pesca de Jerere (lista limitada em 200)</h2>
 
     <input type="button" class="busca" value="Limpar" onClick="jsClearBusca('<?= $this->url(array("controller" => "jerere", "action" => "visualizar"), null, true) ?>')"/>
     <input type="button" class="busca" value="Buscar" onClick="jsBuscaEntrevistas(this.form, '<?= $this->url(array("controller" => "jerere", "action" => "visualizar"), null, true) ?>')"/>
