--- a/application/views/scripts/linha-fundo/editar.phtml
+++ b/application/views/scripts/linha-fundo/editar.phtml
@@ -1,3 +1,5 @@
+<div id="campos_obrigatorios">Campos com * são obrigatórios</div>
+
 <div id="titulos">
     <h2>Desembarque->Linha de Fundo</h2>
     <h3>Entrevista</h3>
@@ -14,7 +16,7 @@
                     <input type="text" name="id_fichaDiaria" placeholder="ID" disabled="true" value="<?= $this->monitoramento['fd_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
-                    <label>ID monitoramento:</label>
+                    <label>ID monitoramento*:</label>
                     <input type="text" name="id_monitoramento" placeholder="ID"  value="<?= $this->monitoramento['mnt_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
@@ -34,7 +36,7 @@
                     <input type="checkbox"  name="motor"  <?php if($this->entrevista['lf_motor'] === true){ echo 'checked';} else{ echo '';}?>/><br />
                 </div>
                 <div class="form-esq">
-                    <label>Barco:</label>
+                    <label>Barco*:</label>
                     <select name="nomeBarco" placeholder="Nome do Barco" />
                     <option value=" " selected></option>
                     <?php
@@ -48,7 +50,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Tipo de Barco:</label>
+                    <label>Tipo de Barco*:</label>
                     <select name="tipoBarco" />
                     <?php
                     foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
@@ -62,10 +64,9 @@
                 </div>
 
             </div>
-            <br/>
             <div class="direita-entrevista">
                 <div class="form-esq">    
-                    <label>Pescador Entrevistado:</label>
+                    <label>Pescador Entrevistado*:</label>
                     <select name="pescadorEntrevistado" />
                     <?php
                     foreach ($this->pescadores as $key => $pescador):
@@ -78,7 +79,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Quant. de Pescadores:</label>
+                    <label>Quant. de Pescadores*:</label>
                     <input type="number" name="numPescadores" min="1" placeholder="QuantidadePescadores" value="<?=$this->entrevista['lf_quantpescadores']?>"/><br />
                 </div>
             </div>
@@ -86,28 +87,28 @@
                 <legend><h4>Saída e Volta:</h4></legend>
                 <div class="form-esq">
 
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataSaida" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" placeholder="Data da Saída" value="<?=$this->dataSaida?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaSaida" placeholder="Hora da Saída" value="<?=$this->horaSaida?>"/>
                 </div>
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataVolta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" placeholder="Data da Volta" value="<?=$this->dataVolta?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaVolta" placeholder="Hora da Volta" value="<?=$this->horaVolta?>"/>
                 </div>
             </div>
             <br/>
             <div class="esquerda">
                 <div class="form-esq">
-                    <label>Tempo Gasto:</label>
+                    <label>Tempo Gasto*:</label>
                     <input type="time" name="tempoGasto" placeholder="Data da Saída" value="<?=$this->entrevista['lf_tempogasto']?>"/>
                 </div>
             </div>
@@ -137,7 +138,7 @@
             <div class="esquerda">
                 <div class="form-esq">
                     <legend><h4>Maré:</h4></legend>
-                    <label>Tipo:</label>
+                    <label>Tipo*:</label>
                     <select name="mare" >
                         <?php
                         foreach ($this->mare as $key => $mare):
