--- a/application/views/scripts/siripoia/editar.phtml
+++ b/application/views/scripts/siripoia/editar.phtml
@@ -1,3 +1,5 @@
+<div id="campos_obrigatorios">Campos com * são obrigatórios</div>
+
 <div id="titulos">
     <h2>Desembarque->Pesca de Siripóia</h2>
     <h3>Entrevista</h3>
@@ -12,7 +14,7 @@
                     <input type="text" name="id_fichaDiaria" placeholder="ID" disabled="true" value="<?= $this->monitoramento['fd_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
-                    <label>ID monitoramento:</label>
+                    <label>ID monitoramento*:</label>
                     <input type="text" name="id_monitoramento" placeholder="ID"  value="<?= $this->monitoramento['mnt_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
@@ -32,7 +34,7 @@
                     <input type="checkbox"  name="motor" <?php if($this->entrevista['sir_motor'] === true){ echo 'checked';} else{ echo '';}?>/><br />
                 </div>
                 <div class="form-esq">
-                    <label>Barco:</label>
+                    <label>Barco*:</label>
                     <select name="nomeBarco" placeholder="Nome do Barco" />
                     <?php
                     foreach ($this->barcos as $key => $barco):
@@ -45,7 +47,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Tipo de Barco:</label>
+                    <label>Tipo de Barco*:</label>
                     <select name="tipoBarco" />
                     <?php
                     foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
@@ -60,7 +62,7 @@
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">    
-                    <label>Pescador Entrevistado:</label>
+                    <label>Pescador Entrevistado*:</label>
                     <select name="pescadorEntrevistado" />
                     <?php
                     foreach ($this->pescadores as $key => $pescador):
@@ -73,7 +75,7 @@
                     <br />
                 </div>
                 <div class="form-esq">
-                    <label>Quant. de Pescadores:</label>
+                    <label>Quant. de Pescadores*:</label>
                     <input type="number" name="numPescadores" min="1" placeholder="Número de Pescadores" value="<?=$this->entrevista['sir_quantpescadores']?>"/><br />
                 </div>
             </div>
@@ -81,34 +83,34 @@
                 <legend><h4>Saída e Volta:</h4></legend>
                 <div class="form-esq">
 
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataSaida" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?= $this->dataSaida?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaSaida" value="<?= $this->horaSaida?>"/>
                 </div>
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="dataVolta" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?= $this->dataVolta?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Horas:</label>
+                    <label>Horas*:</label>
                     <input type="time" name="horaVolta" value="<?= $this->horaVolta?>"/>
                 </div>
             </div>
             <div class="esquerda">
                 <div class="form-esq">
-                    <label>Tempo Gasto:</label>
+                    <label>Tempo Gasto*:</label>
                     <input type="time" name="tempoGasto" value="<?=$this->entrevista['sir_tempogasto']?>"/>
                 </div>
             </div>
             <div class="esquerda">
                 <div class="form-esq">
                     <legend><h4>Maré:</h4></legend>
-                    <label>Tipo:</label>
+                    <label>Tipo*:</label>
                     <select name="mare" >
                         <?php
                         foreach ($this->mare as $key => $mare):
