--- a/application/views/scripts/tarrafa/editar.phtml
+++ b/application/views/scripts/tarrafa/editar.phtml
@@ -1,3 +1,5 @@
+<div id="campos_obrigatorios">Campos com * são obrigatórios</div>
+
 <div id="titulos">
     <h2>Desembarque->Pesca de Tarrafa</h2>
     <h3>Entrevista</h3>
@@ -13,7 +15,7 @@
                     <input type="text" name="id_fichaDiaria" placeholder="ID" disabled="true" value="<?= $this->monitoramento['fd_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
-                    <label>ID monitoramento:</label>
+                    <label>ID monitoramento*:</label>
                     <input type="text" name="id_monitoramento" placeholder="ID" value="<?= $this->entrevista['mnt_id'] ?>" /><br />
                 </div>
                 <div class="form-esq">
@@ -33,7 +35,7 @@
                     <input type="checkbox"  name="motor" <?php if($this->entrevista['tar_motor'] === true){ echo 'checked';} else{ echo '';} ?>/><br />
                 </div>
                 <div class="form-esq">
-                    <label>Barco:</label>
+                    <label>Barco*:</label>
                     <select name="nomeBarco" placeholder="Nome do Barco" />
                     <?php
                     foreach ($this->barcos as $key => $barco):
@@ -46,7 +48,7 @@
 
                 </div>
                 <div class="form-esq">
-                    <label>Tipo de Barco:</label>
+                    <label>Tipo de Barco*:</label>
                     <select name="tipoBarco" />
                     <?php
                     foreach ($this->tipoEmbarcacoes as $key => $tipoEmbarcacao):
@@ -62,7 +64,7 @@
             </div>
             <div class="direita-entrevista">
                 <div class="form-esq">    
-                    <label>Pescador Entrevistado:</label>
+                    <label>Pescador Entrevistado*:</label>
                     <select name="pescadorEntrevistado" />
                     <?php
                     foreach ($this->pescadores as $key => $pescador):
@@ -74,18 +76,18 @@
                     </select><br />
                 </div>
                 <div class="form-esq">
-                    <label>Quant. de Pescadores:</label>
+                    <label>Quant. de Pescadores*:</label>
                     <input type="text"  name="numPescadores" min="1" placeholder="Quantidade de Pescadores "value="<?=$this->entrevista['tar_quantpescadores']?>"/><br />
                 </div>
             </div>
             <div class="esquerda">
                 <legend><h4>Tempo:</h4></legend>
                 <div class="form-esq">
-                    <label>Data:</label>
+                    <label>Data*:</label>
                     <input type="date" name="data" min="2013-11-01"  max = "<?= date("Y-m-d"); ?>" value="<?=$this->entrevista['tar_data']?>"/>
                 </div>
                 <div class="form-esq">
-                    <label>Tempo Gasto:</label>
+                    <label>Tempo Gasto*:</label>
                     <input type="time" name="tempoGasto"value="<?=$this->entrevista['tar_tempogasto']?>"/>
                 </div>
             </div>
